objects/User_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Userreferenzen</relationshipLabel>
        <relationshipName>User_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Userreferenz_ID__c</fullName>
        <label>Old Userreferenz ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Userreferenz</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Userreferenzen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>